# T-Developer

./: .changelog.config.js  .cliff.toml  .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .env.key  .eslintrc.js  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  .task_state.json  <async_generator object temp_db_path at 0x147bd4fc2160>  AI-DRIVEN-EVOLUTION.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE-CODE-OPERATING-RULES.md  CLAUDE-Q-COLLABORATION-RULES.md  CLAUDE.md  CLEANUP_REPORT.md  COMPLETED_TASKS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.cdn  Dockerfile.ecs  EVOLUTION_REPORT.md  EVOLUTION_STATUS.md  FINAL_STATUS_REPORT.md  FOLDER_STRUCTURE_STATUS.md  GETTING_STARTED.md  INTEGRATION_STATUS.md  MASTER_PLAN.md  Makefile  PHASE0_COMPLETED.md  PHASE1_COMPLETION_REPORT.md  PHASE1_VERIFICATION.md  PHASE2_STATUS.md  (+94 more)
backend/: .dockerignore  .editorconfig  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .pre-commit-config-full.yaml  .pre-commit-config.yaml  .prettierrc  API_DOCUMENTATION.md  Dockerfile  Dockerfile.python  Dockerfile.simple  Makefile  Makefile.daily  README.md  STRUCTURE.md  agents.db  agno.config.yaml  alembic.ini  analyze_todo_app.py  deployments.db  docker-compose.yml  final_validation.py  fix_abstract_methods.py  fix_agent_imports.py  fix_agent_interfaces.py  fix_all_imports.py  fix_all_module_imports.py  fix_duplicate_init.py  healthcheck.js  jest-html-reporter.config.js  jest.config.js  jest.e2e.config.js  main.py  nodemon.json  package-lock.json  package.json  performance_benchmark_report_20250808_110945.json  pyproject.toml  (+26 more)
backend/.github/workflows/: ci.yml
backend/agent_storage/: agent_registry.db
backend/agent_storage/blueprints/: 077e0e31e72e7362.json  0ed59e1888a23f7b.json  169dbb9e28a622cf.json  5d6e0373d5c592df.json  6ccd7009a373b525.json  913df966b8b7a967.json  b4b85eafa5a830ef.json  baa0214a80041c76.json  c12dd75cb4752c5a.json  d8b99ddbdac50281.json
backend/agent_storage/generated_code/: d50924f0f916843f.js
backend/agent_storage/instances/: 27c1326d66143179.json  5d6e0373d5c592df.json  6ccd7009a373b525.json  b4b85eafa5a830ef.json  c12dd75cb4752c5a.json  ccc929b424d6084a.json  d50924f0f916843f.json  dbede2cc6a0b61b6.json
backend/agent_storage/metadata/: 00660defe2dbb38f.json  077e0e31e72e7362.json  0ed59e1888a23f7b.json  169dbb9e28a622cf.json  1d11fbe0d6ba8ade.json  2307dd8f07aee9e5.json  27c1326d66143179.json  34c619ca46bc1a83.json  44ccd0820b7d9a90.json  48394919ffda75dc.json  4b5bc2d1fd14a3ae.json  5c260d1a1f8c3383.json  5d6e0373d5c592df.json  5f65906f4e4e4c72.json  678de1bed7a61fbf.json  6ccd7009a373b525.json  7cf6def212b9fbc8.json  8c5c34de357a37e6.json  8e7f20bd09890d70.json  913df966b8b7a967.json  96691186cb7f897e.json  a4957acf66efb1cc.json  a7e9c19ee45c8404.json  adccb77b48769e6d.json  af5115ae639f8ab8.json  b13013a3c566e8ad.json  b4b85eafa5a830ef.json  baa0214a80041c76.json  bcee10f816e89bd4.json  c0c4bd90b075f46c.json  c12dd75cb4752c5a.json  ccc929b424d6084a.json  d35a8ac801a76eaa.json  d50924f0f916843f.json  dbede2cc6a0b61b6.json  e1a7cf67f7047ba2.json  e93b2503066e3be3.json  f6b67aaa953fd61a.json  f74d2bc8a49773d6.json  f95ae4d301bbce65.json  (+2 more)
backend/agents/: .gitkeep
backend/alembic/: env.py
backend/api/: upgrade_api.py
backend/api/routes/: context.py
backend/core/: agent_manager.py  evolution_engine.py  shared_context.py
backend/data/agents/: registry.json
backend/deployment/: aws-setup.sh  check-secrets.py
backend/deployment/aws/: create-cloudwatch-dashboard.py  create-s3-buckets.py  setup-aws-profile.py
backend/deployment/ecs/: Dockerfile  deploy.sh  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  nginx.conf  service-definition.yaml  task-definition.json
backend/deployment/lambda/: Makefile  README.md  deploy.sh  local-test.sh  samconfig.toml  template.yaml
backend/deployment/local/: deploy-local.sh  simple-deploy.sh
backend/docker/: Dockerfile.production
backend/docs/: PROJECT_STRUCTURE_RULES.md
backend/docs/api/: README.md  modules.md
backend/docs/deployment/: iam-role-setup.md
backend/docs/frontend/: T-DeveloperMVP-design-system-plan.md  T-DeveloperMVP-frontend-plan.md
backend/downloads/project_20250808_085043/: README.md  index.js  package.json
backend/migrations/: 001_dynamic_agents_schema.sql  002_agent_registry.sql  002_ai_evolution_schema.sql  rollback_001_dynamic_agents_schema.sql
backend/prisma/: schema.prisma
backend/scripts/: continuous_deployment.py  create_agentcore_wrapper.py  daily_workflow.py  deploy_core_agents.py  deploy_lambda_functions.sh  deploy_to_ecr.sh  migrate_additional_agents.py  migrate_core_agents.py  migration_scheduler.py  run_final_validation.py  setup-dev.sh  setup_parameters.py  setup_secrets.py  start-services.sh  task_validator.py  validate_day.sh  validate_nl_completion.py
backend/src/: ai_complete_service.py  app.ts  complete_service.py  dev-server.ts  index.ts  lambda-integration.ts  main.ts  main_api.py  server.ts  simple-agno-server.js  simple_api.py
backend/test-reports/: custom.css
backend/test_extract/: README.md  index.html  package.json
backend/tests/: README.md  __init__.py  conftest.py  conftest_simple.py  e2e_test_scenarios.py  performance_benchmark.py  project_quality_validator.py  setup.ts  test_agent_generator.py  test_agent_handler.py  test_agents.py  test_ai_analyzers.py  test_ai_capability_analyzer.py  test_api_client.py  test_auth.py  test_auto_deployment.py  test_business_analytics.py  test_claude_evolution_bridge.py  test_code_analysis_agent.py  test_code_optimization.py  test_code_quality_performance.py  test_context_analyzer.py  test_e2e_scenarios.py  test_evaluator_agent.py  test_evolution_handler.py  test_health.py  test_integration.py  test_mcp_server.py  test_metrics_handler.py  test_nl_input_agent.py  test_observability.py  test_pipeline_integration.py  test_planner_agent.py  test_quality_gate.py  test_refactor_agent.py  test_reliability.py  test_requirement_analyzer.py  test_research_agent.py  test_research_references.py  test_sandbox.py  (+11 more)
(+2543 files in other folders)
